Finished preprations for Azure deployment

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=VERYTHREATENING\\SQLEXPRESS;Initial Catalog=DBPT;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "<use-secrets.json>"
   },
   "AllowedHosts": "*"
 }
