Refactored controllers and Imlemented Exception Middleware

--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -4,7 +4,11 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }, 
+  },
+  // this is scheme for sercerts.json
+  "AzureFiles": {
+    "Key": "<use.sercrets.json>"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "<use.sercrets.json>"
   },
